# wordle-native

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: cmake.yml
core/: CMakeLists.txt  core.cpp  main.c  main.cpp
include/: core.h  output.h
main/: main.cpp
output/ncurses/: CMakeLists.txt  ncurses.cpp
output/stdio/: CMakeLists.txt  stdio.cpp
src/: CMakeLists.txt
src/ncurses/: ncurses.c
tests/: CMakeLists.txt  is_valid.cpp  set_get_words.cpp  stress-test-wordlist.txt
